--- a/colorui/components/cu-custom.wxml
+++ b/colorui/components/cu-custom.wxml
@@ -1,5 +1,5 @@
 <view class="cu-custom" style="height:{{CustomBar}}px">
-  <view class="cu-bar fixed {{bgImage!=''?'none-bg text-white bg-img':''}} {{bgColor}}" style="height:{{CustomBar}}px;padding-top:{{StatusBar}}px;{{bgImage?'background-image:url(' + bgImage+')':''}}">
+  <view class="cu-bar fixed {{bgImage!=''?'none-bg text-white bg-img':''}} {{bgColor}}" style="height:{{CustomBar+4}}px;padding-top:{{StatusBar}}px;{{bgImage?'background-image:url(' + bgImage+')':''}}">
     <view class="action" bindtap="BackPage" wx:if="{{isBack}}">
       <text class="cuIcon-back"></text>
       <slot name="backText"></slot>
@@ -11,7 +11,7 @@
     <view class="action border-custom"  wx:if="{{isCustomHome}}" style="width:{{Custom.width-30}}px;height:{{Custom.height}}px;margin-left:calc(750rpx - {{Custom.right}}px)">
       <text class="cuIcon-homefill" bindtap="toHome"></text>
     </view>
-    <view class="content" style="top:{{StatusBar}}px">
+    <view class="content" style="top:{{StatusBar-2}}px;font-weight: bold; font-size:34rpx">
       <slot name="content"></slot>
     </view>
     <slot name="right"></slot>
