--- a/component/noData/noData.wxss
+++ b/component/noData/noData.wxss
@@ -1,13 +1,12 @@
 /* component/noData/noData.wxss */
 @import "/utils/iconfont.wxss";
-/* noData */
 .iconWrap {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 150rpx;
+  padding-top: 200rpx;
 }
 
 .iconNone {
@@ -21,4 +20,5 @@
 
 .icon_text {
   color: #8a9219;
+  margin-top: 30rpx;
 }
