--- a/pages/equipment/index.wxml
+++ b/pages/equipment/index.wxml
@@ -7,7 +7,8 @@
   bindtoload="toload">
   <view class="con">
     <view class="device" title="设备" wx:if="{{total}}">
-      <input type="text" confirm-type="search" placeholder="点位名称/设备编号" value="" bindconfirm="bindPointSerch" />
+      <input type="text" confirm-type="search" placeholder="点位名称/设备编号" value="{{serchContent}}"
+        bindconfirm="bindPointSerch" />
       <icon class="iconfont iconfangdajing"></icon>
     </view>
   </view>
@@ -15,18 +16,18 @@
     <block wx:for="{{deviceList}}" wx:key="index">
       <view class="equipment">
         <view class="equipment_child">
-          <view class="equipment_item">设备编号：{{item.deviceid}}</view>
+          <view class="equipment_item">设备编号：{{item.deviceNo}}</view>
           <view class="equipment_signal">
-            <icon class="iconfont icon iconxinhao {{item.isonline==='1'?'':'isStatus'}}"></icon>
-            <icon class="iconfont icon iconyuanquan1 {{item.isbad==='1'?'':'isStatus'}}"></icon>
+            <icon class="iconfont icon iconxinhao {{item.isOnline==='1'?'':'isStatus'}}"></icon>
+            <icon class="iconfont icon iconyuanquan1 {{item.fault_count===0?'':'isStatus'}}"></icon>
           </view>
         </view>
-        <view class="equipment_item">点位名称：{{item.pointname}}</view>
-        <view class="equipment_item">点位地址：{{item.pointaddress}}</view>
+        <view class="equipment_item">点位名称：{{item.pointName}}</view>
+        <view class="equipment_item">点位地址：{{item.address}}</view>
         <view class="equipment_child">
-          <view class="equipment_item">格口数量：总计：{{item.pointname}}</view>
-          <view class="equipment_item">使用中：{{item.pointname}}</view>
-          <view class="equipment_item">空闲：{{item.pointname}}</view>
+          <view class="equipment_item">格口数量：总计：{{item.alls}}</view>
+          <view class="equipment_item">使用中：{{item.used}}</view>
+          <view class="equipment_item">空闲：{{item.frees}}</view>
         </view>
       </view>
     </block>
