--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,74 +1,74 @@
 <!--index.wxml-->
-<cu-custom bgColor="bg-user-color">
-    <!-- isCustom="true" -->
-    <!-- <view slot="backText">返回</view> -->
-    <view slot="content">报表</view>
-</cu-custom>
-<!-- <view class="nav_title">
-    <view class="nav_tab">
-        <view wx:for="{{info.reportGenres}}" wx:key="index" class="{{reportGenre==index?'hidden':'show'}}" data-index="{{index}}"
-            bindtap="selectedReportGenres">
-            {{item}}</view>
-    </view>
-    <view class="nav_tab nav_tabchild">
-        <view class="{{dateRangeindex==index?'hidden':'show'}}" wx:for="{{info.dateRange[reportGenre]}}" wx:key="index"
-            data-index="{{index}}" bindtap="selectedDateRange">
-            {{item}}
-        </view>
-    </view>
-    <view class="sales">
-        <view class="sales_list" wx:for="{{reportTotal}}" wx:key="index" wx:for-index="key" data-item="item">
-            <view class="quantity"> {{key}}</view>
-            <view class="num">{{item}}</view>
-        </view>
-    </view>
+<view class="nav_title">
+	<view class="nav_tab">
+		<view wx:for="{{info.reportGenres}}" wx:key="index" class="{{reportGenreindex==index?'hidden':'show'}}"
+			data-index="{{index}}" bindtap="selectedReportGenres">
+			{{item}}
+		</view>
+	</view>
+	<view class="nav_tab nav_tabchild">
+		<view class="{{dateRangeindex==index?'hidden':'show'}}" wx:for="{{info.dateRange[reportGenreindex]}}" wx:key="index"
+			data-index="{{index}}" bindtap="selectedDateRange">
+			{{item}}
+		</view>
+	</view>
+	<view class="sales">
+		<view class="sales_list" wx:for="{{reportTotal}}" wx:key="index" wx:for-index="key" data-item="item">
+			<view class="quantity"> {{key}}</view>
+			<view class="num">{{item}}</view>
+		</view>
+	</view>
+	<block wx:if="{{isShow}}">
+		<view class="container">
+			<ec-canvas id="mychart-dom-bar" canvas-id="mychart-bar" ec="{{ ec }}"></ec-canvas>
+		</view>
+	</block>
+	<view class="detail">
+		<!-- hidden="{{isShow}}" -->
+		<view class="explain">
+			点位销售明细(<text>{{pointDetaillyDate}}</text>)
+		</view>
+		<view class="point_name">
+			<input confirm-type="search" value="{{serchContent}}" bindconfirm="bindPointSerch" placeholder="点位名称" />
+			<icon class="iconfont iconfangdajing"></icon>
+		</view>
+	</view>
+	<view class="tabTit box">
+		<view class="flex1" wx:for="{{reportDetail.titles}}" wx:key="type" data-index="{{index}}" bindtap="bindPointSort">
+			<label>
+				<text>{{item}}</text>
+				<image src="{{reportDetail.titleUrls[index]}}" class="coding_flash_image"></image>
+			</label>
+		</view>
+	</view>
+	<view class="list">
+		<block wx:for="{{pointsData}}" wx:key="list" wx:for-item="item">
+			<view class="list_item {{index/2===0?'bac_a':''}}">
+				<view class="info box">
+					<view class="title flex1 ">{{item.pointName?item.pointName:item.pointAddress}}</view>
+					<view class="price flex1 " style="color:#d81e06">￥{{item.priceSum>=0?item.priceSum:item.saleMoney}}</view>
+					<view class="num flex1 ">{{item.pointOrderCount?item.pointOrderCount:item.orderCount}}</view>
+					<view wx:if="{{item.pointId}}" class="report_details flex1 " bindtap="bindReportDetaill"
+						data-pointId="{{item.pointId}}" data-pointName="{{item.pointName}}" data-dayNumber="{{dayNumber}}">
+						<icon class="iconfont iconicon_tubiao_bingtu"></icon>
+					</view>
+					<view wx:else class="report_details flex1 ">{{item.rentalRate}}%</view>
+				</view>
+			</view>
+		</block>
+	</view>
+	<view class="{{isFlag?'iconWrap':'iconNone'}}">
+		<icon class="iconfont mask_icon iconzanwushuju"></icon>
+		<text class="icon_text">暂无数据，亲亲稍后再来吧~~</text>
+	</view>
 
-    <block wx:if="{{isShowGraph}}">
-        <view class="container" wx:for="{{graphGenres[chartsTitleGenre].title}}">
-            <view class="tit">{{item}}</view>
-            <ec-canvas canvas-id="mychart-line" xsign="{{ecxsign[chartsTitleGenre]}}" xdata="{{ecDatas[index]}}"
-                ec="{{ ec }}"></ec-canvas>
-        </view>
-    </block>
-
-    <view class="detail">
-        <view class="explain">
-            点位销售明细(<text>{{pointDetaillyDate}}</text>)
-        </view>
-        <view class="point_name">
-            <input confirm-type="search" bindconfirm="bindPointSerch" placeholder="点位名称" />
-            <image src="../../assets/img/fangdajing.png"></image>
-        </view>
-    </view>
-
-    <view class="tabTit box">
-        <view class="flex1" wx:for="{{reportDetail.titles}}" wx:key="type" data-index="{{index}}"
-            bindtap="bindPointSort">
-            <label>
-                <text>{{item}}</text>
-                <image src="{{reportDetail.titleUrls[index]}}" class="coding_flash_image"></image>
-            </label>
-        </view>
-    </view>
-
-    <view class="list">
-        <block wx:for="{{pointsData}}" wx:key="list" wx:for-item="item">
-            <view class="list_item">
-                <view class="info .box">
-                    <view class="title flex1 ">{{item.PointName}}</view>
-                    <view class="price flex1 ">￥{{item.SaleAmount}}</view>
-                    <view class="num flex1 ">{{item.ProductCount}}</view>
-                    <view class="report_details flex1 " bindtap="bindReportDetaill" data-point="{{item}}">
-                        <image src="../../assets/img/baobiao.png" mode="scaleToFill"></image>
-                    </view>
-                </view>
-            </view>
-        </block>
-    </view>
-
-    <view class="button-wrapper">
-        <button type="default" size="default" loading="{{loading}}" disabled="{{disabled}}" bindtap="bindLoading">
-            {{loadText}}
-        </button>
-    </view>
-</view> -->
+	<view class="pull-refresh {{push.isLoading ? 'chu' : 'jin'}}">
+		<image class="icon-refresh z-index-1" src="{{push.loading}}" />
+		<view class="fs24 pt20 f-color-666 z-index-1">{{push.pullText}}</view>
+	</view>
+	<!-- <view class="button-wrapper">
+		<button type="default" size="default" loading="{{loading}}" disabled="{{disabled}}" bindtap="bindLoading">
+			{{loadText}}
+		</button>
+	</view>-->
+</view>
