--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,6 @@
-/* tab切换 */
+/* index */
 .nav_title {
-  padding: 20rpx 20rpx 0;
+  padding: 10rpx;
   box-sizing: border-box;
 }
 
@@ -26,7 +26,7 @@
   font-size: 28rpx;
   color: #333333;
   text-align: center;
-  background: #f8f8f8;
+  background-color: #fff;
 }
 
 .hidden {
@@ -50,19 +50,22 @@
 .sales {
   display: flex;
   border-radius: 10rpx;
-  background: #f8f8f8;
+  background-color: #fff;
   overflow: hidden;
+  box-shadow: 5px 5px 2px #ddd;
 }
 
 .sales_list {
-  flex: 4;
-  width: 200rpx;
+  flex: 1;
   color: #333;
-  margin: 20rpx 0;
+  font-weight: bold;
+  margin: 25rpx 0;
   text-align: center;
   border-right: 1px solid #dedede;
 }
-
+.sales_list:first-child .num{
+  color: rgb(253, 3, 3);
+}
 .sales_list:last-child {
   border-right: none;
 }
@@ -81,7 +84,11 @@
   margin: 20rpx 0;
   padding: 15rpx;
   border-radius: 10rpx;
-  background: #f8f8f8;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 5px 5px 2px #ddd;
 }
 
 .explain {
@@ -91,11 +98,11 @@
 
 .point_name {
   position: relative;
-  float: right;
-  width: 258rpx;
+  width: 280rpx;
 }
 
 .point_name input {
+  height: 50rpx;
   font-size: 26rpx;
   padding-left: 20rpx;
   border: 1px solid #c9c9c9;
@@ -103,45 +110,42 @@
   box-sizing: border-box;
 }
 
-.point_name image {
-  position: absolute;
-  right: 15rpx;
-  bottom: 9rpx;
-  width: 30rpx;
-  height: 30rpx;
-  z-index: 3;
+.iconfangdajing {
+  font-size: 30rpx;
 }
 
-/* canvas */
+.point_name .iconfangdajing {
+  position: absolute;
+  right: 15rpx;
+  top: -12rpx;
+  color: #808080;
+}
 
+/* ec-canvas */
 .container {
   width: 100%;
-  height: 350rpx;
-  background: #f8f8f8;
+  height: 500rpx;
+  background-color: #fff;
   text-align: center;
   margin: 20rpx auto;
   border-radius: 10rpx;
   overflow: hidden;
-
+  box-shadow: 5px 5px 2px #ddd;
 }
 
 .container .tit {
   height: 60rpx;
   line-height: 61rpx;
   font-size: 30rpx;
-  background: #E8E8E8;
+  background-color: #f8f8f8;
 
 }
 
 ec-canvas {
   width: 100%;
-  height: 300rpx;
+  height: 100%;
 }
 
-canvas {
-  width: 100%;
-  height: 300rpx;
-}
 
 /* 列表 */
 .point_list {
@@ -150,25 +154,35 @@ canvas {
 
 .clear {
   clear: both;
+  /* 不允许两边浮动 */
   overflow: hidden;
 }
 
 .tabTit {
-  width: 710rpx;
+  width: 100%;
   height: 90rpx;
   line-height: 90rpx;
-  font-size: .2rem;
+  font-size: 30rpx;
   z-index: 1;
   text-align: center;
   border-bottom: solid 1px #c9c9c9;
-  background: #fff;
+  background-color: #fff;
+  border-radius: 10rpx 10rpx 0 0;
+}
+
+.box {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: space-between;
 }
 
 
 .tabTit .coding_flash_image {
   width: 14rpx;
   height: 24rpx;
-  margin-left: .066667rem;
+  margin-left: 4rpx;
 }
 
 .flex1 {
@@ -176,36 +190,21 @@ canvas {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-
+  flex: 1;
+  text-align: center;
 }
 
-
-
-
-
-.flex1:first-child,
-.list .list_item .info .title {
-  width: 263rpx;
+.flex1:first-child{
+  flex: 2;
 }
 
-.flex1:nth-child(2),
-.list .list_item .info .price {
-  width: 200rpx;
+.flex1:last-child{
+  flex: .7;
 }
 
-.flex1:nth-child(3),
-.list .list_item .info .num {
-  width: 175rpx;
-}
-
-.flex1:last-child,
-.list .list_item .info .report_details {
-  width: 65rpx;
-}
-
-.list .list_item .flex1:last-child image {
-  width: 32rpx;
-  height: 28rpx;
+.iconicon_tubiao_bingtu{
+  font-size: 50rpx;
+  color: #13227a;
 }
 
 .tabTit .flex1:first-child image,
@@ -213,17 +212,58 @@ canvas {
   display: none;
 }
 
-/*弹性盒模型*/
-.box {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+.list .list_item {
+  height: 70rpx;
+  line-height: 70rpx;
+  text-align: center;
+  background-color: #fff;
+}
+.list .bac_a{
+  background-color: #ddd;
 }
 
 
-.list .list_item {
-  padding: 20rpx 0;
-  text-align: center;
-  border-bottom: 1px solid #E8E8E8;
+.pull-refresh {
+  height: 70rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .5s ease-in-out;
+  overflow: hidden;
+}
+
+.icon-refresh {
+  width: 60rpx;
+  height: 60rpx;
+}
+.chu {
+  height: 90rpx;
+}
+
+.jin {
+  height: 0rpx;
+}
+
+/* 无数据 */
+.iconWrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 30rpx;
+}
+
+.iconNone {
+  display: none;
+}
+
+.mask_icon {
+  font-size: 400rpx;
+  color: #3C77E4;
+}
+
+.icon_text {
+  color: #8a9219;
+  margin-top: 10rpx;
 }
