--- a/pages/index/reportDetails/index.wxss
+++ b/pages/index/reportDetails/index.wxss
@@ -54,6 +54,33 @@
   height: 100%;
 }
 
+.lack_imgWrap {
+  width: 100%;
+  height: 700rpx;
+  background-color: #fff;
+  margin-top: 20rpx;
+  position: relative;
+}
+
+.lack_img {
+  width: 560rpx;
+  height: 420rpx;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.lack_text {
+  position: absolute;
+  bottom: 68rpx;
+  left: 50%;
+  margin-left: -56rpx;
+  color: #8a9219;
+}
+
 .btnWrap {
   width: 100%;
   height: 70rpx;
@@ -61,7 +88,7 @@
   align-items: center;
   justify-content: space-around;
   padding: 0 50rpx;
-  margin-top: 20rpx;
+  margin-top: 30rpx;
 }
 
 .beforeDay,
@@ -86,4 +113,8 @@
 
 .afterDay .dayText {
   margin-right: 16rpx;
+}
+
+.getNum_hover {
+  transform: scale(0.97, 0.97);
 }
