--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -117,7 +117,7 @@
 .point_name .iconfangdajing {
   position: absolute;
   right: 15rpx;
-  top: -12rpx;
+  top: -6rpx;
   color: #808080;
 }
 
@@ -178,6 +178,7 @@ ec-canvas {
   justify-content: space-between;
 }
 
+
 .tabTit_fixed{
   position: fixed;
   top: 0;
@@ -204,7 +205,7 @@ ec-canvas {
 }
 
 .flex1:last-child{
-  flex: .7;
+  flex: .8;
 }
 
 .iconicon_tubiao_bingtu{
@@ -227,9 +228,12 @@ ec-canvas {
   text-align: center;
   background-color: #fff;
 }
-.list .list_item .price{
+.list .list_item .title, .price{
+  padding-left: 6rpx;
   text-align: left;
+
 }
+
 .list .bac_a{
   background-color: #ddd;
 }
